@@ -1,3 +1,9 @@
+2017-06-30  Peter Bergner  <bergner@vnet.ibm.com>
+
+	* tree-cfg.c (group_case_labels_stmt): Merge scanning and compressing
+	loops.  Remove now unneeded calls to gimple_switch_set_label() that
+	just set removed labels to NULL_TREE.
+
 2017-06-30  Aldy Hernandez  <aldyh@redhat.com>
 
 	* tree-ssanames.c (set_range_info_raw): Abstract from ...
@@ -16,7 +22,7 @@
 	For V16FI and V8SF_256 iterators, don't test if both operands are MEM
 	if <mask_applied>.  For VI4F_256 iterator, use <store_mask_predicate>
 	instead of register_operand and <store_mask_constraint> instead of v for
-        the input operand.  Make sure both operands aren't MEMs for if not
+	the input operand.  Make sure both operands aren't MEMs for if not
 	<mask_applied>.
 
 2017-06-30  Sylvestre Ledru  <sylvestre@debian.org>
